discussion/kv_engine/184911/184911_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54884: Add ep stats for tracking magma data blocks

Adding...

ep_data_blocks_size = aggregate of magmaStats.DataBlocksSize
    uncompressed size of data blocks from seqIndex
ep_data_blocks_compress_size = aggregate of
        magmaStats.DataBlocksCompressSize
    uncompressed size of data blocks from seqIndex
ep_data_blocks_compression_ratio
    ep_data_blocks_size / ep_data_blocks_compress_size

Change-Id: If3ee8778475f3cba739be444cde7b9056eaaab06

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2023-01-13 00:07:00.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-13 00:07:16.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/332271/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-13 00:35:03.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/783/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3385:46: error: no member named "DataBlocksSize" in "magma::Magma::MagmaStats" [clang-diagnostic-error]
    fill("magma_DataBlocksSize", magmaStats->DataBlocksSize);
                                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3386:54: error: no member named "DataBlocksCompressSize" in "magma::Magma::MagmaStats" [clang-diagnostic-error]
    fill("magma_DataBlocksCompressSize", magmaStats->DataBlocksCompressSize);
                                                     ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/783/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3385:46:
error: no member named "DataBlocksSize" in "magma::Magma::MagmaStats" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/783/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/962/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(3385): error C2039: "DataBlocksSize": is not a member of "magma::Magma::MagmaStats" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/962/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/754/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3385:46:
error: no member named "DataBlocksSize" in "magma::Magma::MagmaStats"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/754/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/789/ : FAILURE

Compile error at [2023-01-13T00:12:46.503Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3385:46:
error: ?struct magma::Magma::MagmaStats? has no member named ?DataBlocksSize?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/789/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/802/ : FAILURE

Compile error at [2023-01-13T00:09:13.084Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3385:46:
error: no member named "DataBlocksSize" in "magma::Magma::MagmaStats"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/802/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/795/ : FAILURE

Compile error at [2023-01-13T00:08:28.080Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3385:46:
error: no member named "DataBlocksSize" in "magma::Magma::MagmaStats"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/795/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/775/ : FAILURE

Compile error at [2023-01-13T00:28:47.012Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3385:46:
error: no member named "DataBlocksSize" in "magma::Magma::MagmaStats"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/775/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/794/ : FAILURE

Compile error at [2023-01-13T00:23:30.248Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3385:46:
error: ?struct magma::Magma::MagmaStats? has no member named ?DataBlocksSize?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/794/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1071/ : FAILURE

Compile error at [2023-01-13T00:10:12.249Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3385:46:
error: no member named "DataBlocksSize" in "magma::Magma::MagmaStats"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1071/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22117/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/804/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
